<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fragmentOrders"
        android:enabled="true"
        android:icon="@drawable/ic_orders"
        android:orderInCategory="1"
        android:title="@string/Order_button"
        app:showAsAction="ifRoom"
         />
    <item
        android:id="@+id/fragmentWorkExamples"
        android:enabled="true"
        android:icon="@drawable/ic_work_example"
        android:orderInCategory="2"

        android:title="@string/WorkExamples_button"
         />
    <item
        android:id="@+id/fragmentProfile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="3"
        android:title="@string/Profile_button"
         />
    <item
        android:id="@+id/fragmentSettings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="4"
        android:title="@string/Settings_button"
         />

</menu>