<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.NewItemActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:background="@color/white"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvTitle2"
                style="@style/TextViewVariantsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/required_measurements"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edHeight2"
                style="@style/TextViewVariantsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/height"
                app:layout_constraintEnd_toEndOf="@+id/tvTitle2"
                app:layout_constraintStart_toStartOf="@+id/tvTitle2"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle2" />

            <EditText
                android:id="@+id/edNeckCircumference2"
                style="@style/TextViewVariantsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/neck_circumference"
                app:layout_constraintEnd_toEndOf="@+id/edHeight2"
                app:layout_constraintStart_toStartOf="@+id/edHeight2"
                app:layout_constraintTop_toBottomOf="@+id/edHeight2" />

            <EditText
                android:id="@+id/edChestGirth12"
                style="@style/TextViewVariantsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"

                android:hint="@string/chest_girth1"
                app:layout_constraintEnd_toEndOf="@+id/edNeckCircumference2"
                app:layout_constraintStart_toStartOf="@+id/edNeckCircumference2"
                app:layout_constraintTop_toBottomOf="@+id/edNeckCircumference2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>